Working on UKF project write-up

--- a/book/doc-sky/duckiesky.bib
+++ b/book/doc-sky/duckiesky.bib
@@ -4,3 +4,11 @@ title={{An Integrated Introduction to Robotics for the Next Generation}},
 year={2018},
 booktitle={{IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}},
 month={October}}
+
+@misc{labbe_kalman,
+author={Roger R Labbe Jr},
+title={Kalman and Bayesian Filters in Python},
+year={2018},
+howpublished={Published as a Jupyter Notebook hosted on GitHub at https://github.com/rlabbe/Kalman-and-Bayesian-Filters-in-Python and in PDF form at https://drive.google.com/file/d/0By_SW19c1BfhSVFzNHc0SjduNzg/view?usp=sharing (accessed August 29, 2018)},
+month={May}
+}
