Filled in Bayes Filter section from Luke's project write-up

--- a/book/doc-sky/duckiesky.bib
+++ b/book/doc-sky/duckiesky.bib
@@ -12,3 +12,11 @@ year={2018},
 howpublished={Published as a Jupyter Notebook hosted on GitHub at https://github.com/rlabbe/Kalman-and-Bayesian-Filters-in-Python and in PDF form at https://drive.google.com/file/d/0By_SW19c1BfhSVFzNHc0SjduNzg/view?usp=sharing (accessed August 29, 2018)},
 month={May}
 }
+
+@book{probabilistic_robotics,
+ author = {Thrun, Sebastian and Burgard, Wolfram and Fox, Dieter},
+ title = {Probabilistic Robotics (Intelligent Robotics and Autonomous Agents)},
+ year = {2005},
+ isbn = {0262201623},
+ publisher = {The MIT Press},
+}
