Progress on UKF project

--- a/book/doc-sky/duckiesky.bib
+++ b/book/doc-sky/duckiesky.bib
@@ -20,3 +20,10 @@ month={May}
  isbn = {0262201623},
  publisher = {The MIT Press},
 }
+
+@misc{uhlmann,
+ title={First-Hand: The Unscented Transform},
+ howpublished={Engineering and Technology History Wiki},
+ note={Contributions from Uhlmann, Jeffrey. Accessed August 31, 2018},
+ url={https://ethw.org/First-Hand:The_Unscented_Transform}
+}
