--- a/book/doc-sky/duckiesky.bib
+++ b/book/doc-sky/duckiesky.bib
@@ -27,3 +27,17 @@ month={May}
  note={Contributions from Uhlmann, Jeffrey. Accessed August 31, 2018},
  url={https://ethw.org/First-Hand:The_Unscented_Transform}
 }
+
+@article{tellex,
+   author = {{Tellex}, S. and {Brown}, A. and {Lupashin}, S.},
+    title = "{Estimation for Quadrotors}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1809.00037},
+ primaryClass = "cs.RO",
+ keywords = {Computer Science - Robotics, Computer Science - Systems and Control},
+     year = 2018,
+    month = aug,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180900037T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
