--- a/book/doc-sky/90-bibliography/duckiesky.bib
+++ b/book/doc-sky/90-bibliography/duckiesky.bib
@@ -41,3 +41,15 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180900037T},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+
+@article{diebel2006representing,
+  title={Representing attitude: Euler angles, unit quaternions, and rotation vectors},
+  author={Diebel, James},
+  journal={Matrix},
+  volume={58},
+  number={15-16},
+  pages={1--35},
+  year={2006}
+}
