--- a/book/doc-sky/90-bibliography/duckiesky.bib
+++ b/book/doc-sky/90-bibliography/duckiesky.bib
@@ -53,3 +53,10 @@ archivePrefix = "arXiv",
   pages={1--35},
   year={2006}
 }
+
+@book{jaynes2003probability,
+  title={Probability theory: The logic of science},
+  author={Jaynes, Edwin T},
+  year={2003},
+  publisher={Cambridge university press}
+}
