--- a/book/doc-sky/90-bibliography/duckiesky.bib
+++ b/book/doc-sky/90-bibliography/duckiesky.bib
@@ -60,3 +60,16 @@ archivePrefix = "arXiv",
   year={2003},
   publisher={Cambridge university press}
 }
+
+@ARTICLE{imu_predict_vs_update, 
+author={A. T. Erdem and A. Ö. Ercan},
+journal={IEEE Transactions on Image Processing},
+title={Fusing Inertial Sensor Data in an Extended Kalman Filter for 3D Camera Tracking},
+year={2015},
+volume={24},
+number={2},
+pages={538-548},
+keywords={image fusion;image motion analysis;Kalman filters;nonlinear filters;inertial sensor data fusion;extended Kalman filter;3D camera tracking;3D egomotion estimation;EKF framework;camera measurements;correction stage;prediction stage;accelerometer data;gyroscope data;3D pose error;3D position tracking accuracy;3D orientation tracking accuracy;simulated data generation method;inertial measurement unit;Cameras;Gyroscopes;Accelerometers;Mathematical model;Equations;Three-dimensional displays;Jacobian matrices;Inertial sensor fusion;Extended Kalman Filter;3D camera tracking;inertial measurement unit;accelerometer;gyroscope;Inertial sensor fusion;extended Kalman filter;3D camera tracking;inertial measurement unit;accelerometer;gyroscope},
+doi={10.1109/TIP.2014.2380176},
+ISSN={1057-7149},
+month={Feb},}
