Cited Ziegler Nichols

--- a/book/doc-sky/90-bibliography/duckiesky.bib
+++ b/book/doc-sky/90-bibliography/duckiesky.bib
@@ -61,7 +61,7 @@ archivePrefix = "arXiv",
   publisher={Cambridge university press}
 }
 
-@ARTICLE{imu_predict_vs_update, 
+@ARTICLE{imu_predict_vs_update,
 author={A. T. Erdem and A. Ö. Ercan},
 journal={IEEE Transactions on Image Processing},
 title={Fusing Inertial Sensor Data in an Extended Kalman Filter for 3D Camera Tracking},
@@ -73,3 +73,12 @@ keywords={image fusion;image motion analysis;Kalman filters;nonlinear filters;in
 doi={10.1109/TIP.2014.2380176},
 ISSN={1057-7149},
 month={Feb},}
+
+@article{zieglernichols,
+author = {J.G. Ziegler and N.B. Nichols},
+journal = {ASME},
+title = "{Optimum Settings for Automatic Controllers}",
+year = {1942},
+volume = {64},
+pages = {759-768},
+}
