--- a/book/doc-sky/90-bibliography/duckiesky.bib
+++ b/book/doc-sky/90-bibliography/duckiesky.bib
@@ -73,3 +73,18 @@ keywords={image fusion;image motion analysis;Kalman filters;nonlinear filters;in
 doi={10.1109/TIP.2014.2380176},
 ISSN={1057-7149},
 month={Feb},}
+
+@INPROCEEDINGS{Wan00theunscented,
+    author = {Eric A. Wan and Rudolph Van Der Merwe},
+    title = {The Unscented Kalman Filter for Nonlinear Estimation},
+    booktitle = {},
+    year = {2000},
+    pages = {153--158}
+}
+
+@INPROCEEDINGS{Merwe03sigma-pointkalman,
+    author = {Rudolph Van Der Merwe and Eric Wan},
+    title = {Sigma-Point Kalman Filters for Probabilistic Inference in Dynamic State-Space Models},
+    booktitle = {In Proceedings of the Workshop on Advances in Machine Learning},
+    year = {2003}
+}
